# TOVA

./: .gitignore  DEPLOYMENT.md  FEATURES.md  Makefile  VERSION.md  app.py  appss.py  base_model.py  betty.csv  dashboard.py  data.json  dataGen.ipynb  demo.ipynb  docker-cleanup-rebuild.sh  docker-compose.gpu.yml  docker-compose.yaml  file.ipynb  myapp.py  new_requirements.txt  old_compose_to delete.yaml  preprocessing.py  pyproject.toml  readme.md  rebuild-and-run.sh  requirements.txt  sample.env  scratch.ipynb  terraform.tfstate  test.py  util.py
_old_not_needed_to_delete/: pipeline.py  run 2.py
adapters/: base_model.py  bertopic_adapter.py  lda_adapter.py  top2vec_adapter.py
config/: config.yaml
docker/: .Dockerfile 2.solr_db.icloud  .check 2.md.icloud  Dockerfile 2.postgres_db  Dockerfile.api  Dockerfile.base  Dockerfile.solr_api  Dockerfile.solr_db  Dockerfile.ui  check.md  entrypoint-ui.sh  entrypoint_api.sh
docs/: FEATURES.md  aws_deployment_llm_solution.md
nginx/: tova.conf
scripts/: deploy.sh  setup-ec2.sh
src/: cli.py
static/: columns.js  file-validation.js  upload.js
systemd/: tova-ui.service
templates/: active_learning_two.html  admin.html  base.html  dashboard.html  dashboard2.html  homepage.html  index.html  inference.html  loadData.html  loadFiles.html  loadMod.html  loadModel.html  login.html  manageCorpora.html  privacy.html  signup.html  terms.html  trained_models.html  training 2.html  training.html
terraform/: DELETE_RESOURCES.md  DELETE_VPC.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_OPTIONS_COMPARISON.md  (+19 more)
(+251 files in other folders)
